--- a/arch/arm64/configs/visionsom_8mm_android_defconfig
+++ b/arch/arm64/configs/visionsom_8mm_android_defconfig
@@ -711,6 +711,8 @@ CONFIG_SND_SOC_TAS571X=m
 CONFIG_SND_SOC_NAU8822=y
 CONFIG_SND_SIMPLE_CARD=y
 CONFIG_SND_AUDIO_GRAPH_CARD=y
+CONFIG_SND_PCM=y
+CONFIG_SND_DUMMY=m
 CONFIG_HIDRAW=y
 CONFIG_UHID=y
 CONFIG_HID_A4TECH=y
